<resources>
    <string name="app_name">BankingApp</string>
    <string name="scroller">scroller</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="nothing_is_gonna_load">Nothing is gonna load</string>
    <string name="purchase_name">Purchase Name</string>
    <string name="amount">Amount</string>
    <string name="quantity">Quantity</string>
    <string name="submit">Submit</string>
    <string name="loan_calc">Loan Calc</string>
    <string name="admin_only">Admin Only</string>
    <string name="submitLoan">Submit</string>
    <string name="_5_year_breakdown">5 Year Breakdown</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="current_interest_is_6">Current Interest is 6%</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="userLogout">USER</string>
    <string name="mainSubmit">Submit</string>
    <string name="mainQuantity">Quantity</string>
    <string name="mainAmount">Amount</string>
    <string name="mainPurchase">Purchase</string>
    <string name="debug">debug</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noLogsMessage">No Transactions</string>
    <string name="enter_new_user_info">Enter New User Info</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_account">Create Account</string>
    <string name="enter_new_user_title">Enter New User Info</string>
    <string name="enter_fullName">Enter Full Name</string>
    <string name="enterAddress">Enter Address</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password</string>
    <string name="create_newAccount">Create New Account</string>
    <string name="userinfo">UserInfo</string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="title_activity_new_user.java">NewUser.java</string>
    <string name="enter_full_name1">Enter full name</string>
    <string name="enter_interest_percent">Enter interest percent</string>
    <string name="textViewLoanAmount">Loan Amount:</string>
    <string name="_5_years">5 Years</string>
    <string name="_7_years">7 Years</string>
    <string name="interest">Interest:</string>
    <string name="loanamount">loanamount</string>
    <string name="percentage">percentage</string>
    <string name="payment">payment</string>
    <string name="_3_years">3 years</string>
    <string name="_2_years">2 years</string>
    <string name="main_2">Main 2</string>
    <string name="_2_years_int">2 Years</string>
    <string name="users">users</string>
    <string name="finance_tips">Finance Tips</string>
    <string name="payment_name">Payment Name:</string>
    <string name="add_notes">Add Notes:</string>
    <string name="create_notification">Create Notification</string>
    <string name="notifications">Notifications</string>
    <string name="delete_defaultuser">Delete defaultUser</string>
    <string name="delete_defaultuserbutton">Delete defaultUser</string>
</resources>