<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanCalc">

    <Button
        android:id="@+id/loanSubmit"
        android:layout_width="139dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:onClick="twoYear"
        android:text="@string/_2_years_int"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthlyPay" />

    <EditText
        android:id="@+id/editPercentage"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:hint="@string/enter_interest_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editLoanAmount"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/loan_amount"
        android:textSize="20sp"
        android:textAlignment="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPercentage"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/monthlyPay"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLoanAmount"
        android:hint="@string/monthly_payment" />

    <Button
        android:id="@+id/loanSubmit3Years"
        android:layout_width="139dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:onClick="threeYear"
        android:text="@string/_3_years"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanSubmit" />


</androidx.constraintlayout.widget.ConstraintLayout>